# shroudb-courier

./: .dockerignore  ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  Dockerfile  ENGINE_DAG.md  README.md  TODOS.md  deny.toml  protocol.toml  shroudb-courier.md
.cargo/: config.toml
.github/workflows/: release.yml
shroudb-courier-cli/: Cargo.toml
shroudb-courier-cli/src/: main.rs
shroudb-courier-client/: Cargo.toml
shroudb-courier-client/src/: connection.rs  error.rs  lib.rs  response.rs
shroudb-courier-core/: Cargo.toml
shroudb-courier-core/src/: adapter.rs  channel.rs  delivery.rs  error.rs  lib.rs  ops.rs  template.rs  transit.rs  ws.rs  ws_adapter.rs
shroudb-courier-engine/: Cargo.toml
shroudb-courier-engine/src/: capabilities.rs  channel_manager.rs  delivery.rs  engine.rs  lib.rs
shroudb-courier-protocol/: Cargo.toml
shroudb-courier-protocol/src/: auth.rs  command.rs  command_parser.rs  commands.rs  dispatch.rs  error.rs  lib.rs  response.rs
shroudb-courier-protocol/src/handlers/: deliver.rs  health.rs  mod.rs  template_info.rs  template_list.rs
shroudb-courier-protocol/src/resp3/: parse_command.rs
shroudb-courier-protocol/tests/: integration_tests.rs
shroudb-courier-server/: Cargo.toml
shroudb-courier-server/src/: adapters.rs  cipher_client.rs  cipher_embedded.rs  config.rs  connection.rs  http.rs  main.rs  server.rs  tcp.rs  websocket.rs
shroudb-courier-server/tests/: integration.rs
shroudb-courier-server/tests/common/: mod.rs
