[workspace]
resolver = "3"
default-members = ["shroudb-courier-server"]
members = [
    "shroudb-courier-server",
    "shroudb-courier-core",
    "shroudb-courier-protocol",
    "shroudb-courier-client",
    "shroudb-courier-cli",
]

[workspace.package]
description = "Secure notification delivery — SMTP, webhook, SendGrid, WebSocket adapters"
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-courier-core = { path = "shroudb-courier-core", version = "0.1.1", registry = "shroudb" }
shroudb-courier-protocol = { path = "shroudb-courier-protocol", version = "0.1.1", registry = "shroudb" }
shroudb-courier-client = { path = "shroudb-courier-client", version = "0.1.1", registry = "shroudb" }

# Commons crates (shroudb registry)
shroudb-crypto = { version = "0.1.0", registry = "shroudb" }
shroudb-telemetry = { version = "0.1.0", registry = "shroudb" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Template engine
tera = "1"

# SMTP delivery
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname"], default-features = false }

# HTTP client for webhook/SendGrid
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Delivery IDs
uuid = { version = "1", features = ["v4"] }

# Adapter trait
async-trait = "0.1"

# Zeroize for plaintext
zeroize = "1"

# Networking
axum = "0.8"
rustls = "0.23"
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = "0.26"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
base64 = "0.22"
hex = "0.4"
libc = "0.2"
notify = "7"
rustyline = { version = "17", features = ["derive"] }
rustls-native-certs = "0.8"
tokio-tungstenite = "0.24"
futures-util = "0.3"
