[package]
name = "shroudb-courier-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust client SDK for the Courier just-in-time decryption delivery engine"

[dependencies]
shroudb-client-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
