[package]
name = "shroudb-courier-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroudb-crypto.workspace = true
tera.workspace = true
lettre.workspace = true
reqwest.workspace = true
uuid.workspace = true
async-trait.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
base64.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
