[package]
name = "shroudb-courier-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Store-backed engine for the Courier just-in-time decryption delivery engine"

[dependencies]
shroudb-courier-core = { workspace = true }
shroudb-store = { workspace = true }
shroudb-crypto = { workspace = true }
shroudb-acl = { workspace = true }
shroudb-chronicle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
shroudb-storage = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
