[package]
name = "shroudb-courier-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-courier-core.workspace = true
shroudb-crypto.workspace = true

dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
