[package]
name = "shroudb-courier-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "shroudb-courier"
path = "src/main.rs"

[dependencies]
shroudb-courier-core.workspace = true
shroudb-courier-protocol.workspace = true
shroudb-crypto.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
libc.workspace = true
axum.workspace = true
tower-http.workspace = true
notify.workspace = true
zeroize.workspace = true
uuid.workspace = true
