[package]
name = "shroudb-courier-server"
description = "ShrouDB Courier server — secure notification delivery pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-courier"
path = "src/main.rs"

[dependencies]
shroudb-courier-core.workspace = true
shroudb-courier-protocol.workspace = true
shroudb-crypto.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
shroudb-telemetry.workspace = true
libc.workspace = true
axum.workspace = true
notify.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde_json.workspace = true
uuid.workspace = true
