[package]
name = "shroudb-courier-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "TCP server binary for the Courier just-in-time decryption delivery engine"

[[bin]]
name = "shroudb-courier"
path = "src/main.rs"

[dependencies]
shroudb-courier-core = { workspace = true }
shroudb-courier-engine = { workspace = true }
shroudb-courier-protocol = { workspace = true }
shroudb-store = { workspace = true }
shroudb-storage = { workspace = true }
shroudb-client = { workspace = true }
shroudb-acl = { workspace = true }
shroudb-protocol-wire = { workspace = true }
shroudb-server-tcp = { workspace = true }
tokio-rustls = { workspace = true }
shroudb-cipher-client = { workspace = true }
shroudb-crypto = { workspace = true }
shroudb-server-bootstrap = { workspace = true }
shroudb-engine-bootstrap = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
shroudb-courier-client = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
